@@ -47,6 +47,7 @@ SHOW_DOUBLE_AS_ONE_TITLE, SHOW_DOUBLE_AS_ONE_WIDE = 1, 2
 MAX_LIBRARY_COVER_SIZE = 500
 SORT_NAME, SORT_PATH, SORT_SIZE, SORT_LAST_MODIFIED = 1, 2, 3, 4
 SORT_DESCENDING, SORT_ASCENDING = 1, 2
+STORE_LAST_PATH, STORE_LAST_PATH_AND_PAGE = 1, 2
 SIZE_HUGE, SIZE_LARGE, SIZE_NORMAL, SIZE_SMALL, SIZE_TINY = MAX_LIBRARY_COVER_SIZE, 300, 250, 125, 80
 
 ACCEPTED_COMMENT_EXTENSIONS = ['txt', 'nfo', 'xml']
